deploy/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: gobazel

# kubectl create -f namespace.yml
