deploy/gobazel.yml
apiVersion: v1
kind: Namespace
metadata:
  name: gobazel
---
# gobazel service 1
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: gobazel-service1
  namespace: gobazel
  labels:
    app: service1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gobazel-service1
  template:
    metadata:
      labels:
        app: gobazel-service1
    spec:
      containers:
      - name: service1
        image: pcrofts/gobazel-service1:dev
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service1
  namespace: gobazel
spec:
  selector:
    app: gobazel-service1
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gobazel
  namespace: gobazel
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: gobazel.minikube
    http:
      paths:
        - path: /service1
          backend:
            serviceName: service1
            servicePort: http
