deploy/monitoring-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-server
  namespace: gobazel
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: prometheus.minikube
    http:
      paths:
        - path: /
          backend:
            serviceName: monitoring-prometheus-server
            servicePort: http
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-dashboard
  namespace: gobazel
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: grafana.minikube
    http:
      paths:
        - path: /
          backend:
            serviceName: grafana-grafana
            servicePort: http
