deploy/registry.yaml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: registry
  labels:
    app: gobazel
    component: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gobazel
      component: registry
  template:
    metadata:
      labels:
        app: gobazel
        component: registry
    spec:
      containers:
      - name: registry
        image: registry:2.6.2
        imagePullPolicy: IfNotPresent
        name: registry
        ports:
        - containerPort: 5000
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gobazel
    component: registry
  name: registry

spec:
  selector:
    app: gobazel
    component: registry
  ports:
  - name: registry
    port: 80
    targetPort: 5000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: registry
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: registry.gobazel
    http:
      paths:
        - path: /
          backend:
            serviceName: registry
            servicePort: registry
  - host: registry
    http:
      paths:
        - path: /
          backend:
            serviceName: registry
            servicePort: registry
